Fix slider thumb inconsistency on iOS (#147)

--- a/style.css
+++ b/style.css
@@ -517,6 +517,8 @@ input[type="range"]::-webkit-slider-thumb {
   width: 11px;
   background: svg-load("./icon/indicator-horizontal.svg");
   transform: translateY(-8px);
+  box-shadow: none;
+  border: none;
 }
 
 input[type="range"].has-box-indicator::-webkit-slider-thumb {
